<?xml version="1.0" encoding="utf-8"?>
    <AbsoluteLayout android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
        <EditText android:layout_width="fill_parent" android:layout_x="0dip" android:layout_y="5dip" android:layout_height="60dip" android:id="@+id/address" android:hint="@string/address"></EditText>
        <EditText android:layout_width="fill_parent" android:layout_height="60dip" android:layout_x="0dip" android:layout_y="64dip" android:id="@+id/user" android:hint="@string/user"></EditText>
        <EditText android:layout_width="fill_parent" android:layout_height="60dip" android:layout_x="0dip" android:layout_y="129dip" android:id="@+id/password" android:hint="@string/password" android:password="true"></EditText>
        <Button android:layout_height="60dip" android:layout_x="-5dip" android:layout_y="190dip" android:layout_width="160dip" android:id="@+id/clear" android:text="@string/clear"></Button>
        <Button android:layout_width="160dip" android:layout_height="60dip" android:layout_x="166dip" android:layout_y="190dip" android:id="@+id/save" android:text="@string/save"></Button>
        <Button android:layout_width="fill_parent" android:layout_height="60dip" android:layout_x="-1dip" android:layout_y="248dip" android:id="@+id/back" android:text="@string/back"></Button>
    </AbsoluteLayout>
