<?xml version="1.0" encoding="utf-8"?>
    <TableLayout android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
        <ImageView android:layout_width="wrap_content" android:src="@drawable/icon" android:layout_height="wrap_content"></ImageView>
        <Button android:id="@+id/login" android:text="@string/login" android:layout_width="fill_parent" android:layout_height="60dip" ></Button>
        <Button android:id="@+id/logout" android:text="@string/logout" android:layout_width="fill_parent" android:layout_height="60dip"></Button>
        <Button android:id="@+id/setting" android:text="@string/setting" android:layout_width="fill_parent" android:layout_height="60dip"></Button>
        <Button android:id="@+id/about" android:text="@string/about" android:layout_width="fill_parent" android:layout_height="60dip"></Button>
    </TableLayout>
